# domain/response/tokens.go
@@ -1,6 +1,0 @@
-package response
-
-type AuthTokens struct {
-	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token"`
-}
